--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,5 +1,5 @@
 $clock: 300px;
-$black: #323232;
+$black: #111;
 $white: #fff;
 $dark_red: #c62828;
 $dark_blue: #1e88e5;
@@ -8,3 +8,4 @@ $dark_orange: #ff8f00;
 $gray: #aaa;
 $light_gray: #ddd;
 $light_blue: #bbdefb;
+$yellow: #FF0;
