--- a/sass/base.scss
+++ b/sass/base.scss
@@ -19,180 +19,7 @@ html{
 body{
 	@include gradient(radial, (#fff, #ccc));
 	position: relative;
-
-	&.theme2{
-		@include gradient(radial, (#e3f2fd , #90caf9));
-
-		.clock{
-			border-color: $dark_blue ;
-			background-image: url(../img/js_clock.png);
-			background-position: 0;
-
-			&:after{
-				display: block;
-			}
-
-			.point,
-			.seconds{		
-				background: $dark_blue ;		
-			}
-
-			.hours,
-			.minutes{
-				@include box-shadow(0 0 1px $dark_blue);
-			}
-
-			.numbers{
-
-				.number{
-					color: $black;
-					background: white;
-					@include text-shadow(0 0 1px #ccc);
-				}
-			}
-
-			.config{
-				.item{
-
-					&:hover{
-						background: $dark_blue;
-					}
-
-					.submenu{
-
-						ul{
-
-							li{
-
-								&.active,
-								&:hover{
-									background: $dark_blue;
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-
-		.current_date{
-
-			span{
-				color: $dark_blue;
-			}
-		}
-	}
-	&.theme3{
-		@include gradient(radial, (#c8e6c9 , #43a047));
-
-		.clock{
-			border: solid ($clock / 30) $dark_green ;
-			background: white;
-			@include box-shadow((0 0 15px 1px rgba(0,0,0,7), 0 0 4px 1px rgba(0,0,0,7) inset));
-
-			&:after{
-				display: block;
-			}
-
-			.point,
-			.seconds{		
-				background: $dark_green;		
-			}
-
-			.numbers{
-
-				.number{
-					color: $black;
-					background: white;
-					@include text-shadow(0 0 1px #ccc);
-				}
-			}
-
-			.config{
-				.item{
-
-					&:hover{
-						background: $dark_green;
-					}
-
-					.submenu{
-
-						ul{
-
-							li{
-
-								&.active,
-								&:hover{
-									background: $dark_green;
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-
-		.current_date{
-
-			span{
-				color: $dark_green;
-			}
-		}
-	}
-	&.theme4{
-		@include gradient(radial, (#ffecb3 , #ffd54f ));
-
-		.clock{
-			border: solid ($clock / 30) $dark_orange ;
-			background-image: url(../img/html.png);
-			background-position: 0;
-			background-color: white;
-
-			.point,
-			.seconds{		
-				background: $dark_orange;		
-			}
-
-			.numbers{
-
-				.number{
-					color: $black;
-					background: transparent;
-					@include text-shadow(0 0 1px #ccc);
-				}
-			}
-
-			.config{
-				.item{
-
-					&:hover{
-						background: $dark_orange;
-					}
-
-					.submenu{
-
-						ul{
-
-							li{
-
-								&.active,
-								&:hover{
-									background: $dark_orange;
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-
-		.current_date{
-
-			span{
-				color: $dark_orange;
-			}
-		}
-	}
+	@include themes();
 }
 
 .main{
@@ -233,6 +60,7 @@ body{
 		width: 80%;
 		z-index: 0;
 		height: 80%;
+		@include transition(all 1s ease);
 	}
 
 	&:before{
@@ -410,14 +238,29 @@ body{
 					li{
 						padding: .25rem;
 						text-align: center;
+						border-bottom: solid transparent thin;
 						@include transition(all 1s ease);
 
 						&:not(.header){
 							&.active,
 							&:hover{
 								background: $yellow;
+								border-color: #323232;
 								color: white;
 								text-shadow: 0 0 2px $black;
+
+								&:last-child{
+									border-bottom-color: transparent;
+									border-top-color: black;
+								}
+							}
+
+							&.active{
+								border-top: solid thin black;
+							}
+
+							&:last-child{
+								border-top: solid thin transparent;
 							}
 						}
 
@@ -563,7 +406,13 @@ body{
 	display: inline;
 	max-width: 190px;
 	min-height: 60px;
+	z-index: 10;
 	@include border-radius(5px);
+	@include transition(all .5s ease);
+
+	&:hover{
+		background: white;
+	}
 
 	h1,span{
 		font-size: 13px;
@@ -578,36 +427,5 @@ body{
 	}
 }
 
-
-@media (max-width: 500px){
-	.clock{
-		.config{
-			left: -20px;
-
-			ul.size{
-				li{
-					&:last-child{
-						display: none;
-					};
-				}
-			}
-		}
-
-		&.small{
-			.config{
-				left: -60px;
-			}
-		}
-	}
-}
-
-// keyframes
-@keyframes rotate{
-	0%, 100%{ @include transform(scale(1) rotate(0));}
-	50%{ @include transform(scale(.7)  rotate(360deg));}
-}
-
-@-webkit-keyframes rotate{
-	0%, 100%{ @include transform(scale(1) rotate(0));}
-	50%{ @include transform(scale(.7)  rotate(360deg));}
-}
+@import 'queries';
+@import 'keyframes';
