add localstorage for save settings user, and load all configuration

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -684,6 +684,8 @@ body {
         top: -6px;
         padding-bottom: 10px;
         left: 15px; }
+    .clock.big .config {
+      left: -58px; }
 
 .current_date {
   position: absolute;
